--- a/latex/resumo.tex
+++ b/latex/resumo.tex
@@ -12,5 +12,5 @@ utilizado nesse projeto para a criptografia de textos. Após isso, esse algoritm
 computacional MATLAB. Com essa implementação será possível analisar o desempenho desse algoritmo.
 	
 		\noindent
-		\textbf{Palavras-chaves}: Grafos, Problema dos Menores Caminhos, Floyd-Warshall, Dijkstra, Iterações
+		\textbf{Palavras-chave} : Segurança, Privacidade, Criptografia, Algoritmo AES, MATLAB
 	\end{resumo}
