--- a/latex/main.tex
+++ b/latex/main.tex
@@ -158,7 +158,7 @@ brazil,				% o último idioma é o principal do documento
 	\include{intro}
 	\phantompart      %aparecer no indice
 	
-	\chapter{Referência}
+	\include{Revisao}
 	\phantompart
 	
 	\chapter{Objetivos}
