--- a/latex/Revisao.tex
+++ b/latex/Revisao.tex
@@ -10,3 +10,7 @@ Em \cite{oliveira2012criptografia} é ressaltado que as técnicas computacionais
 Na criptografia simétrica, que se encontra o AES, existe a presença de uma chave secreta, usada tanto pelo remetente quanto o destinatário e a ideia é que se use um algoritmo de deciframento junto com esta chave para cifrar e decifrar a mensagem. As principais vantagens observadas são a simplicidade e rapidez para executar os processos criptográficos.
 
 Na criptografia assimétrica, diferentemente da simétrica, existem duas chaves, uma secreta e outra pública. A chave pública pode ficar disponível para qualquer pessoa que queira se comunicar de modo seguro, mas a secreta é de posse apenas de cada titular e é com ela que o destinatário poderá decodificar uma mensagem que foi criptografada para ele com sua respectiva chave pública. A vantagem desse sistema é permitir a qualquer um enviar uma mensagem secreta, apenas utilizando a chave pública de quem irá recebê-la, a desvantagem é a complexidade empregada no desenvolvimento dos algoritmos que devem ser capazes de reconhecer a dupla de chaves existentes.
+
+já no artigo \cite{ribeiro2001estudo} é feito uma comparação entre DES(Data encryption Standard) e AES(Advanced Encryption Standard), onde é indagado, no começo, quais as melhorias trazidas pelo AES, já que este substituiu o DES como sistema de criptografia. Sendo que as principais diferenças entre o DES e o AES são os algoritmos concorrentes, onde no DES só tinha 1, no AES tiveram vários.
+
+Para análise de algoritmos, ambos foram testados na mesma máquina para obtenção dos resultados. No experimento foi obtido que entre o DES e o Rijndael o tempo do DES é menor, junto ao tamanho do arquivo criado.
