--- a/latex/main.tex
+++ b/latex/main.tex
@@ -180,7 +180,7 @@ brazil,				% o último idioma é o principal do documento
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%Referência
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    \nocite{harrison2007aes,lu2002integrated,hamalainen2006design,oliveira2012criptografia,coutinho,stallings,burnett,dacriptografia}
+    \nocite{harrison2007aes,lu2002integrated,hamalainen2006design,oliveira2012criptografia,coutinho,stallings,burnett,dacriptografia,ribeiro2001estudo}
     
 	\bibliography{biblio}
 	
