--- a/latex/biblio_crip.bib
+++ b/latex/biblio_crip.bib
@@ -1,4 +1,5 @@
 //criptografia assimetrica rsa em audio
+
 @article{dacriptografia,
   title={Criptografia Assim{\'e}trica em Documentos de {\'A}udio: uma experi{\^e}ncia inicial com o algoritmo RSA},
   author={da Silva, Mariana de Lourdes Godoy and Oliveira, Cintia Carvalho}
@@ -62,3 +63,9 @@
  publisher={IMPA}
 }
 
+@inproceedings{ribeiro2001estudo,
+  title={Um Estudo Comparativo entre algoritmos de criptografia DES--Lucifer (1977) e AES--Rijndael (2000)},
+  author={Ribeiro, Vinicius Gadis},
+  booktitle={VII Congreso Argentino de Ciencias de la Computaci{\'o}n},
+  year={2001}
+}
